fix dark mode

--- a/docs/src/style.css
+++ b/docs/src/style.css
@@ -69,7 +69,7 @@ h3,
 h4,
 h5,
 h6 {
-  @apply font-black text-black !important;
+  @apply font-bold text-black !important;
 
   .dark & {
     @apply text-white !important;
@@ -82,7 +82,7 @@ ol {
   @apply text-neutral-700 dark:text-neutral-300 !important;
 
   a {
-    @apply nx-text-primary-600 font-bold decoration-2 hover:no-underline !important;
+    @apply font-bold decoration-2 hover:no-underline !important;
   }
 }
 
@@ -96,6 +96,12 @@ ol {
 
 kbd {
   @apply text-neutral-500 dark:border-neutral-100/20 dark:bg-black/50 dark:text-neutral-400;
+}
+
+.nextra-nav-container {
+  nav a {
+    @apply text-neutral-500 dark:text-neutral-400 !important;
+  }
 }
 
 .nextra-code-block {
